--- a/style/style.css
+++ b/style/style.css
@@ -81,6 +81,10 @@ section h3 {
 section h4 {
 	font-size: 1.2em;
 }
+#for_word {
+	display: flex;
+	justify-content: space-around;
+}
 #word {
 	font-size: 1.4em;
 }
@@ -99,7 +103,11 @@ section form div {
 	justify-content: space-between;
 	width: 100%;
 }
+section form input {
+	margin-bottom: 20px;
+}
 section form input, section form select {
+	width: 70%;
 	border-radius: 4px;
 }
 section form button {
