Ajout de la fonction qui génère l'état de départ du mot à trouver en fonction de sa taille

--- a/style/style.css
+++ b/style/style.css
@@ -88,6 +88,9 @@ section h4 {
 #word {
 	font-size: 1.4em;
 }
+#change_word {
+	width: 150px;
+}
 section div {
 	display: flex;
 	justify-content: space-between;
